Fix: Fixed alignments

--- a/src/components/layout/HeroSection/HeroSection.scss
+++ b/src/components/layout/HeroSection/HeroSection.scss
@@ -15,6 +15,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    filter: brightness(0.8);
   }
 
   &__content {
@@ -23,7 +24,7 @@
     position: absolute;
     top: 20%;
     left: 10%;
-    z-index: 10000;
+    z-index: 1;
   }
 
   &__title {
